# tech-challenge-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.github/workflows/: deploy-ci.yml
.kubernetes/: deployment-food-api.yaml  deployment.yaml  service.yaml
app/: foodapi.db  server.py
app/adapters/driven/orm/: category_repository.py  customer_repository.py  models.py  order_repository.py  product_repository.py
app/adapters/driver/dtos/: category_dto.py  order_dto.py
app/application/usecases/: base_usecase.py  find_all_categories_usecase.py  find_all_order_usecase.py  find_category_by_id_usecase.py  find_customer_by_cpf_usecase.py  find_product_by_id_usecase.py  list_all_customers_usecase.py  register_category_usecase.py  register_order_usecase.py
app/domain/: exceptions.py  parameters.py  value_objects.py
app/domain/entities/: base.py  category_entity.py  customer_entity.py  order_entity.py  payment_entity.py  product_entity.py
app/domain/services/: category_service.py  customer_service.py  order_service.py  product_service.py
app/infrastructure/orm/: category_repository.py  customer_repository.py  models.py  order_repository.py  payment_repository.py  payment_type_repository.py  product_repository.py
app/infrastructure/rest/: category_api.py  customer_api.py  order_api.py  payment_api.py  product_api.py
app/infrastructure/webhook/: update_status_payment_hook.py
docs/: Food API.postman_collection.json
tests/entities/: test_category.py  test_customer.py  test_product.py
(+31 files in other folders)
